--- a/nativescript/package.json
+++ b/nativescript/package.json
@@ -21,10 +21,15 @@
     "@angular/platform-browser": "~4.1.0",
     "@angular/platform-browser-dynamic": "~4.1.0",
     "@angular/router": "~4.1.0",
+    "@brycemarshall/string-format": "^1.0.2",
     "@ngx-translate/core": "^6.0.1",
     "@ngx-translate/http-loader": "0.0.3",
+    "google-libphonenumber": "^3.1.0",
     "nativescript-angular": "^3.1.0",
+    "nativescript-ngx-fonticon": "^4.0.0",
+    "nativescript-telephony": "^1.0.4",
     "nativescript-theme-core": "~1.0.2",
+    "nativescript-toasts": "^1.0.3",
     "reflect-metadata": "~0.1.8",
     "rxjs": "~5.3.0",
     "tns-core-modules": "^3.1.0",
